src/app/containers/quiz/quiz-content/codelab-quiz-content.component.scss
@use '../../../../variables' as vars;

h3 {
  display: block;
  font-family: vars.$font-stack;
  font-size: 30px;
  font-weight: 500;
  margin: 5px 0;
  padding: 10px 15px;
  background-color: var(--bg-option, vars.$light-gray);
  border: 2px solid vars.$vivid-blue;
  color: var(--text-option, vars.$dark-brown);
  width: 100%;
  max-width: 615px;
  height: auto;
  box-sizing: border-box;
  line-height: 1.35;
  position: relative;
  z-index: 1;

  &:empty {
    display: none;
  }
}

@media (max-width: 600px) {
  h3 {
    font-size: 22px;
    padding: 8px 12px;
  }
}

